Mi proyecto API estática de la familia Jackson para reentrega

--- a/Pipfile
+++ b/Pipfile
@@ -4,15 +4,16 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pytest = "*"
 
 [packages]
-flask = "*"
 psycopg2-binary = "*"
 flask-cors = "*"
 pytest = "*"
 mock = "*"
 pytest-testdox = "*"
 pytest-ordering = "*"
+flask = "*"
 
 [requires]
 python_version = "3.13"
